--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
-    "next": "14.1.0",
+    "next": "^14.2.35",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
