--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "jspdf": "^4.0.0",
     "next": "^14.2.35",
     "next-themes": "^0.2.1",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
