--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "jspdf": "^4.0.0",
+    "lucide-react": "^0.562.0",
     "next": "^14.2.35",
     "next-themes": "^0.2.1",
     "pdf-lib": "^1.17.1",
