--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "framer-motion": "^12.26.2",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "next": "^14.2.35",
